src/test/snapshots/tinychange__test__changelog_tests@missing_changelog.snap
---
source: src/test/mod.rs
expression: text
input_file: src/test/cases/missing_changelog
---
Changelog
---
# Changelog

## [Unreleased]

### Added

- Added test runner (by test_runner)

### Changed

- Renamed test runner (by test_runner)
